hildon-fm (1.0-1) unstable; urgency=low

  * UNRELEASED
  * Made branch to trunk and maintenance branch.
  * Major refactoring of code, and initial UPnP/AV support.
  * Corrected sfil_ni_operation_failed to sfil_ib_create_folder_not_allowed
    (N#29064).
  * Some white space & indentation fixes.
  * Fixed small UI glitch ('(no notes)') (N#22670).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 May 2006 13:01:15 +0300

hildon-fm (0.22-1) unstable; urgency=low

  * Made rendering optimisation allowed by fixed bug 22807.
  * Fixed domain for file_ib_name_too_long.
  * Added support for another memory card.
  * Some white space fixes here and there.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 06 May 2006 22:19:12 +0300

hildon-fm (0.21-1) unstable; urgency=low

  * Backported hildon_file_system_info_async_new() and
    hildon_file_system_info_async_cancel() to enable easier moving to
    the new asyncronous API.
  * Added two unit tests for the asyncronous API.
  * hildon-fm-dev is for all architecture (N#27025).
  * hildon-fm-test is for all architecture (N#27026).
  * Lintian fixes.

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 26 Apr 2006 15:13:55 +0300

hildon-fm (0.20-1) unstable; urgency=low

  * Packaging fixes to appease Lintian.
  * Added thumb instruction support (N#26673).
  * Added movable separator (GtkHPaned) to file selection (N#24207).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Sat, 22 Apr 2006 17:51:31 +0300

hildon-fm (0.19-1) unstable; urgency=low

  * Added dbus_connection_ref() to match the dbus_connection_unref(),
    fixes a crash (N#25650).

 -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 12 Apr 2006 18:56:48 +0300

hildon-fm (0.18-1) unstable; urgency=low

  * Fixed several UI string issues (N#12997, N#23288, N#24520, N#25076,
    N#25953, N#25964, N#26024).
  * Added hildon-file-common-private.h for common definitions.
