@@ -7,6 +7,11 @@ hildon-fm (1.0-1) unstable; urgency=low
     (N#29064).
   * Some white space & indentation fixes.
   * Fixed small UI glitch ('(no notes)') (N#22670).
+  * Now showing correct icon while generating thumbnail for images (N#29799).
+    (This introduced libossomime dependency.)
+  * Added hildon_file_chooser_dialog_focus_to_input for special selection
+    needs (N#28539).
+  * Fixed unparenting problem in file selection finalisation (N#28074).
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Mon, 29 May 2006 13:01:15 +0300
 
